@@ -2,6 +2,7 @@ package com.example.student.service;
 
 import com.example.student.config.CodeConfig;
 import com.example.student.util.ProcessResult;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
@@ -17,6 +18,7 @@ import java.util.concurrent.atomic.AtomicLong;
  * create          2020-03-13 18:22
  */
 @Component
+@Slf4j
 public class RunCode {
     private final CodeConfig config;
 
@@ -38,31 +40,30 @@ public class RunCode {
         File pwd = Paths.get(tmpDir, String.format("%016x", nextLong.incrementAndGet())).toFile();
         // 新建文件夹
         pwd.mkdirs();
+        // 文件全路径
+        String filePath = null;
+        log.info("代码保存的路径："+pwd);
         ProcessBuilder pb = null;
         switch (type) {
             case "C":
                 try (Writer writer = new BufferedWriter(new FileWriter(new File(pwd, "Main.c"), Charset.defaultCharset()))) {
                     writer.write(code);
                 }
+                filePath = pwd + "\\Main.c";
                 pb = new ProcessBuilder().command(config.getC()).directory(pwd);
                 break;
             case "CPP":
                 try (Writer writer = new BufferedWriter(new FileWriter(new File(pwd, "Main.cpp"), Charset.defaultCharset()))) {
                     writer.write(code);
                 }
+                filePath = pwd + "\\Main.cpp";
                 pb = new ProcessBuilder().command(config.getCpp()).directory(pwd);
-                break;
-            case "JAVA":
-                try (Writer writer = new BufferedWriter(new FileWriter(new File(pwd, "Main.java"), Charset.defaultCharset()))) {
-                    writer.write(code);
-                }
-                String[] command = new String[]{getJavaExecutePath(), "-Dfile.encoding=" + Charset.defaultCharset(), "--source", "11", "--enable-preview", "Main.java"};
-                pb = new ProcessBuilder().command(command).directory(pwd);
                 break;
             case "PYTHON":
                 try (Writer writer = new BufferedWriter(new FileWriter(new File(pwd, "Main.py"), Charset.defaultCharset()))) {
                     writer.write(code);
                 }
+                filePath = pwd + "\\Main.py";
                 pb = new ProcessBuilder().command(config.getPython(), "Main.py").directory(pwd);
                 break;
             default:
@@ -78,11 +79,11 @@ public class RunCode {
             try (InputStream input = p.getInputStream()) {
                 result = readAsString(input, Charset.defaultCharset());
             }
-            return new ProcessResult(p.exitValue(), result);
+            return new ProcessResult(p.exitValue(), result, filePath);
         } else {
             System.err.println(String.format("Error: process %s timeout. destroy forcibly.", p.pid()));
             p.destroyForcibly();
-            return new ProcessResult(p.exitValue(), "运行超时");
+            return new ProcessResult(p.exitValue(), "运行超时", filePath);
         }
     }
 
